--- a/assets/styles.css
+++ b/assets/styles.css
@@ -21,6 +21,11 @@
   /* border: 2px solid red; */
 }
 
+.page-header * {
+  padding: 0;
+  margin: 0
+}
+
 .page-navbar {
   border: 2px solid blue;
   width: 300px;
